--- a/RWSTroubleshooting/ClientApp/src/app/troubleshoot/troubleshoot.component.html
+++ b/RWSTroubleshooting/ClientApp/src/app/troubleshoot/troubleshoot.component.html
@@ -1,10 +1,12 @@
 <h1>RWS Troubleshooting</h1>
 
-<p>Step</p>
+<p>{{stepText}}</p>
 
-<div *ngFor="let item of items; index as i;">
-  <input type="radio" value="{{item}}" name="option{{i}}" />
-  <label> {{item}}</label>
+<div *ngFor="let option of options; index as i;">
+  <label>
+    <input type="radio" [(ngModel)]="nextStep" value="{{option.nextStep}}" name="option{{i}}" />
+    {{option.text}}
+  </label>
 </div>
 
 <button class="btn btn-primary" (click)="getNextStep()">Submit</button>
